# Caesar-agent

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
caesar/: __init__.py  cli_bridge.py  config.py  daemon.py  logging_setup.py  management.py  setup.py
caesar/channels/: __init__.py  cli_adapter.py  telegram_adapter.py
caesar/core/: __init__.py  briefing.py  cron.py  dream.py  events.py  llm.py  orchestrator.py  queue.py  skill_executor.py  status.py
caesar/memory/: knowledge_graph.py  l3.py  l4.py  mind_mirror.py  storage.py
caesar/self/: ARCHITECTURE.md  CHANGELOG.md  PRINCIPLES.md  ROADMAP.md
caesar/tools/: __init__.py  base.py  browser.py  cron_tools.py  documents.py  internet.py  memory_tools.py  self_knowledge.py  shell_files.py  sources.py  stt.py
caesar/watchdog/: __init__.py  __main__.py
etc/: config.yaml.example
scripts/: diagnose_search.py  full_audit.py  install.sh  test_auto_save_skill.py  test_briefing.py  test_browser.py  test_cheap_analyzer.py  test_cron_quiet.py  test_daemon_briefing.py  test_direct_command.py  test_e2e_search.py  test_encoding.py  test_exact_deny.py  test_gap_analysis.py  test_god_mode_comprehensive.py  test_god_mode_full_power.py  test_index_memory.py  test_l2_categories.py  test_l2_dedup.py  test_l3.py  test_l3_delete.py  test_l3_filter.py  test_l3_search_quality.py  test_l4_consecutive.py  test_llm_router.py  test_loop_detection.py  test_management_update.py  test_memory_icons.py  test_mind_mirror.py  test_permission_guard.py  test_persistence.py  test_reliability.py  test_sandbox_hardening.py  test_scenarios.py  test_self_poke.py  test_self_update.py  test_sql_bindings_bug.py  test_status_extended.py  test_stt.py  test_tg_auth.py  (+4 more)
